--- a/CSS/index.css
+++ b/CSS/index.css
@@ -295,8 +295,83 @@ nav{
     position: relative;
     width: 50px;
     height: 50px;
-    left: 30px;
-    top: -30px;
-    z-index: -10px;
-   
+    top: -240px;
+    left: 45px;
+    background-color: white;
+}
+.produit img{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -290px;
+    left: 345px;
+    background-color: white;
+}
+.societe img{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -340px;
+    left: 720px;
+}
+.compte img{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -390px;
+    left: 1130px;
+    background-color: white;
+}
+.facebok img{
+    osition: relative;
+    width: 50px;
+    height: 50px;
+    top: -290px;
+    left: 150px;
+    background-color: white;
+}
+.facebok p{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -370px;
+    left: 250px;
+    color: white;
+    font-size: 35px;
+}
+.github img{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -470px;
+    left: 550px;
+    color: white;
+    font-size: 35px;
+}
+.github p{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -550px;
+    left: 650px;
+    color: white;
+    font-size: 35px;
+}
+.google img{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -650px;
+    left: 1000px;
+    color: white;
+    font-size: 35px;
+}
+.google p{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: -730px;
+    left: 1090px;
+    color: white;
+    font-size: 35px;
 }
